--- a/storage-proofs/Cargo.toml
+++ b/storage-proofs/Cargo.toml
@@ -12,7 +12,7 @@ bitvec = "0.5"
 rand = "0.4"
 libc = "0.2"
 # FIXME: Point to development branch.
-merkle_light = { git = "https://github.com/filecoin-project/merkle_light", branch = "feat/disk-mmap" }
+merkle_light = { git = "https://github.com/filecoin-project/merkle_light", branch = "feat/decouple-data" }
 failure = "0.1"
 byteorder = "1"
 crossbeam-utils = "0.6"
